--- a/include/headersub.html
+++ b/include/headersub.html
@@ -8,10 +8,7 @@
     <div class="sub-menu">
       <ul class="menu">
         <li>
-          <a href="#" onclick="location.href='../signin/login.html'">Sign Out</a>
-        </li>
-        <li>
-          <a href="javascript:void(0)"onclick="location.href='../signin/login.html'">My Page</a>
+          <a href="#" onclick="location.href='../signin/login.html'">Sign In</a>
         </li>
       </ul>
       <div class="search">
