--- a/css/Mypage.css
+++ b/css/Mypage.css
@@ -1,118 +1,2 @@
-
-html {
-    height: 100%;
-  }
-  
-  .Mybody {
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    background-color: #64b5fd;
-  }
-  
-  #main-holder {
-    width: 30%;
-    height: 50%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    background-color: white;
-    border-radius: 7px;
-    box-shadow: 0px 0px 5px 2px black;
-  }
-  
-  #mypage-form {
-    align-self: flex-start;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-  }
-
-  #mypage-header{
-    font-weight: bold;
-  }
-
-  @media (max-width: 1000px) {
-    .board_wrap {
-        width: 100%;
-        min-width: 320px;
-        padding: 0 30px;
-        box-sizing: border-box;
-    }
-
-    .board_list .num,
-    .board_list .writer,
-    .board_list .count {
-        display: none;
-    }
-
-    .board_list .date {
-        width: 40%;
-    }
-
-    .board_list .title {
-        text-indent: 10px;
-    }
-
-    .board_list .top .title {
-        text-indent: 0;
-    }
-
-    .board_page a {
-        width: 26px;
-        height: 26px;
-    }
-
-    .board_page a.bt {
-        padding-top: 7px;
-    }
-    
-    .board_page a.num {
-        padding-top: 6px;
-    }
-
-    .board_view .info dl {
-        width: 50%;
-        padding: 0;
-    }
-
-    .board_view .info dl:nth-child(-n+2) {
-        margin-bottom: 5px;
-    }
-
-    .board_view .info dl::before {
-        display: none;
-    }
-
-    .board_view .info dl dt,
-    .board_view .info dl dd {
-        font-size: 1.2rem;
-    }
-
-    .board_write .info dl {
-        width: 49%;
-    }
-
-    .board_write .info dl:first-child {
-        margin-right: 2%;
-    }
-
-    .board_write .title dt,
-    .board_write .info dt {
-        display: none;
-    }
-
-    .board_write .title dd,
-    .board_write .info dd {
-        width: 100%;
-    }
-
-    .board_write .title input[type="text"],
-    .board_write .info input[type="text"],
-    .board_write .info input[type="password"] {
-        width: 100%;
-    }
-}
+@import url(style.css);
+@import url(media.css);
