--- a/css/Mypage.css
+++ b/css/Mypage.css
@@ -1,2 +1,39 @@
-@import url(style.css);
-@import url(media.css);
+
+html {
+    height: 100%;
+  }
+  
+  .Mybody {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    background-color: #64b5fd;
+  }
+  
+  #main-holder {
+    width: 80%;
+    height: 80%;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px 2px black;
+  }
+  
+  #mypage-form {
+    align-self: flex-start;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+  }
+
+  #mypage-header{
+    font-weight: bold;
+  }
+
+  @import url(style.css);
+  @import url(media.css);  
