--- a/include/headersub.html
+++ b/include/headersub.html
@@ -10,6 +10,9 @@
         <li>
           <a href="#" onclick="location.href='../signin/login.html'">Sign In</a>
         </li>
+        <li>
+          <a href="#"onclick="location.href='signin/login.html'">My Page</a>
+        </li>
       </ul>
       <div class="search">
         <input type="text" />
