--- a/include/header.html
+++ b/include/header.html
@@ -8,10 +8,13 @@
     <div class="sub-menu">
       <ul class="menu">
         <li>
+          <a>홍길동 님</a>
+        </li>
+        <li>
           <a href="#" onclick="location.href='../signin/login.html'">Sign Out</a>
         </li>
         <li>
-          <a href="javascript:void(0)"onclick="location.href='../signin/login.html'">My Page</a>
+          <a href="javascript:void(0)"onclick="location.href='../signin/Mypage.html'">My Page</a>
         </li>
       </ul>
       <div class="search">
