--- a/include/head.html
+++ b/include/head.html
@@ -1,22 +1,22 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <!-- The Open Graph Protocal -->
- <meta property="og:type" content="website" />
- <meta property="og:site_name" content="LicenseLab" />
- <meta property="og:title" content="LicenseLab" />
- <meta property="og:description" content="당신의 자격증을 책임지는곳, LicenseLab" />
- <meta property="og:image" content="./favicon.png" />
- <meta property="og:url" content="https://kimwoojin0081.github.io/LicenseLab" />
- <!-- Twitter Cards -->
- <meta property="twitter:card" content="summary" />
- <meta property="twitter:site" content="LicenseLab" />
- <meta property="twitter:title" content="LicenseLab" />
- <meta property="twitter:description" content="당신의 자격증을 책임지는곳, LicenseLab" />
- <meta property="twitter:image" content="./favicon.png" />
- <meta property="twitter:url" content="https://kimwoojin0081.github.io/LicenseLab" />
- <title>Lisence Lab</title>
- <link rel="icon" href="/LicenseLab/favicon.png" />
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+<!-- The Open Graph Protocal -->
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Heropy Coffee" />
+<meta property="og:title" content="Heropy Coffee Landing" />
+<meta property="og:description" content="헤로피커피는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+<meta property="og:image" content="./images/for_seo.jpg" />
+<meta property="og:url" content="https://epic-darwin-271c77.netlify.app" />
+<!-- Twitter Cards -->
+<meta property="twitter:card" content="summary" />
+<meta property="twitter:site" content="Heropy Coffeee" />
+<meta property="twitter:title" content="Heropy Coffee Landing" />
+<meta property="twitter:description" content="헤로피커피는 세계에서 가장 큰 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+<meta property="twitter:image" content="./images/for_seo.jpg" />
+<meta property="twitter:url" content="https://epic-darwin-271c77.netlify.app" />
+<title>Lisence Lab</title>
+<link rel="icon" href="./favicon.png" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
 <!--Google APIs-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
