--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ a {
 }
 
 .board_wrap {
-    width: 800px;
-    height: 500px;
+    width: 1000px;
+    height: 600px;
     margin: 100px auto;
     padding: 40px;
 }
@@ -60,15 +60,19 @@ a {
     background: #000;
     color: #fff;
 }
-
 .board_list {
     width: 100%;
     border-top: 2px solid #000;
+    display: flex; /* Flexbox 레이아웃 사용 */
+    flex-direction: column; /* 세로 방향으로 정렬 */
+    align-items: center; /* 가운데 정렬 */
 }
 
 .board_list > div {
     border-bottom: 1px solid #ddd;
     font-size: 0;
+    width: 80%; /* 너비를 조정하여 중앙에 정렬 */
+    margin: 0 auto; /* 가운데 정렬을 위한 margin 추가 */
 }
 
 .board_list > div.top {
@@ -81,7 +85,7 @@ a {
 
 .board_list > div > div {
     display: inline-block;
-    padding: 15px 0;
+    padding: 12px 0;
     text-align: center;
     font-size: 1.4rem;
 }
@@ -153,68 +157,77 @@ a {
     border-left: 1px solid #ddd;
 }
 
-.board_view {
-    width: 100%;
+
+.board_view{
     border-top: 2px solid #000;
 }
 
-.board_view .title {
-    padding: 20px 15px;
-    border-bottom: 1px dashed #ddd;
-    font-size: 2rem;
+.board_view .title,
+.board_view .info {
+    padding: 15px;
 }
 
 .board_view .info {
-    padding: 15px;
-    border-bottom: 1px solid #999;
+    border-top: 1px dashed #ddd;
+    border-bottom: 1px solid #000;
+    font-size: 0;
+}
+
+.board_view .title dl {
     font-size: 0;
 }
 
 .board_view .info dl {
-    position: relative;
     display: inline-block;
-    padding: 0 20px;
+    width: 50%;
+    vertical-align: middle;
 }
 
-.board_view .info dl:first-child {
-    padding-left: 0;
-}
-
-.board_view .info dl::before {
-    content: "";
-    position: absolute;
-    top: 1px;
-    left: 0;
-    display: block;
-    width: 1px;
-    height: 13px;
-    background: #ddd;
-}
-
-.board_view .info dl:first-child::before {
-    display: none;
-}
-
-.board_view .info dl dt,
-.board_view .info dl dd {
+.board_view .title dt,
+.board_view .title dd,
+.board_view .info dt,
+.board_view .info dd {
     display: inline-block;
+    vertical-align: middle;
     font-size: 1.4rem;
 }
 
+.board_view .title dt,
+.board_view .info dt {
+    width: 100px;
+}
 
-.board_view .info dl dd {
-    margin-left: 10px;
-    color: #777;
+.board_view .title dd {
+    width: calc(100% - 100px);
+}
+
+.board_view .title input[type="text"],
+.board_view .info input[type="text"],
+.board_view .info input[type="password"] {
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.board_view .title input[type="text"] {
+    width: 80%;
 }
 
 .board_view .cont {
-    padding: 15px;
     border-bottom: 1px solid #000;
-    line-height: 160%;
-    font-size: 1.4rem;
 }
 
-.board_write {
+.board_view .cont textarea {
+    display: block;
+    width: 100%;
+    height: 300px;
+    padding: 15px;
+    box-sizing: border-box;
+    border: 0;
+    resize: vertical;
+}
+
+
+.board_write{
     border-top: 2px solid #000;
 }
 
@@ -280,4 +293,24 @@ a {
     box-sizing: border-box;
     border: 0;
     resize: vertical;
+}
+
+.bt_wrap button,
+.bt_wrap a {
+    display: inline-block;
+    min-width: 80px;
+    margin-right: 10px;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 2px;
+    font-size: 1.4rem;
+}
+
+.bt_wrap a:first-child {
+    margin-left: 0;
+}
+
+.bt_wrap a.on {
+    background: #000;
+    color: #fff;
 }
